welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:8: error: not found: value value
     	       if(nums(i)==value) aux = aux + 1;
                           ^