welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {

    var i = 0;
    var aux=0;
 
        while( i <  nums.length) {
     	       
     	       if(nums(i)==value) aux = aux + 1;
                 i=i+1;
 	
 	                      }
        if(aux==0) return -1;
 	       else return(aux);}